# nostr

./: Cargo.toml
bindings/nostr_ex/: .gitignore  README.md  mix.exs
bindings/nostr_ex/lib/: nostr_ex.ex
bindings/nostr_ex/native/nostr_ex/: Cargo.toml  README.md
bindings/nostr_ex/native/nostr_ex/src/: lib.rs
bindings/nostr_ex/test/: nostr_ex_test.exs
