[package]
name = "nostr_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "nostr_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.33.0"
nostr-sdk = { path = "../../../../crates/nostr-sdk", default-features = false, features = ["all-nips", "indexeddb", "webln"] }
